// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test in GiffExpertApp component should GiffExpertApp render correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
  <Footer />
</Fragment>
`;

exports[`test in GiffExpertApp component should render a categories list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Homer"
      key="0"
    />
    <GifGrid
      category="Borat"
      key="1"
    />
  </ol>
  <Footer />
</Fragment>
`;
